--- a/style/bootstrap/css/bootstrap.css
+++ b/style/bootstrap/css/bootstrap.css
@@ -2553,10 +2553,10 @@ textarea.form-control {
   text-decoration: none;
 }
 
-.btn:focus, .btn.focus {
+/* .btn:focus, .btn.focus {
   outline: 0;
   box-shadow: 0 0 0 0.2rem rgba(0, 123, 255, 0.25);
-}
+} */
 
 .btn.disabled, .btn:disabled {
   opacity: 0.65;
