--- a/style/main.css
+++ b/style/main.css
@@ -108,6 +108,23 @@ header .resume {
   border-radius: 0 0 50px 0;
 }
 
+.portofolio {
+  margin-bottom: 50px;
+}
+
+.portofolio .porto1 {
+  margin-left: 100px;
+  margin-bottom: 20px;
+}
+
+.portofolio .porto2 {
+  margin-left: 35px;
+}
+
+.portofolio .porto3 {
+  margin-left: -30px;
+}
+
 footer {
   background-color: #1F1F26;
   color: white;
@@ -173,6 +190,10 @@ footer img {
   }
   .skill .webdev, .skill .uiux, .skill .network {
     margin-left: 50px;
+    margin-bottom: 20px;
+  }
+  .portofolio .porto1, .portofolio .porto2, .portofolio .porto3 {
+    margin-left: 45px;
     margin-bottom: 20px;
   }
   footer {
