--- a/style/main.scss
+++ b/style/main.scss
@@ -38,6 +38,17 @@ header{
         font-weight: 400;
         opacity: 0.5;
     }
+
+    .button{
+        position: relative;
+        top: 0;
+        transition: top ease 0.5s;
+    }
+
+    .button:hover{
+        top: -10px;
+    }
+
     .btn-hire{
         background-color: #E84A5F;
         color: white;
@@ -68,10 +79,23 @@ header{
 }
 
 .skill{
-    background-color: #F5F5F5;
+    background-color: #f1f1f1;
     height: max-content;
     padding-bottom: 100px;
+    
+    .card{
+        cursor: pointer;
+        position: relative;
+        top: 0;
+        transition: top ease 1s;
 
+        &:hover{
+            -webkit-box-shadow: 3px 40px 42px -39px rgba(0,0,0,0.52);
+            -moz-box-shadow: 3px 40px 42px -39px rgba(0,0,0,0.52);
+            box-shadow: 3px 40px 42px -39px rgba(0,0,0,0.52);
+            top: -10px;
+        }
+    }
     .img-circle{
         border-radius: 200%;
         width: 100px;
@@ -103,6 +127,18 @@ header{
     .porto3{
         margin-left: -30px;
     }
+
+    .zoom{
+        overflow: hidden;
+    }
+
+    .zoom img{
+        transition: all 1s ease ;
+    }
+
+    .zoom:hover img{
+        transform: scale(1.1);
+    }
 }
 
 footer{
@@ -110,12 +146,34 @@ footer{
     color: white;
 
     .icon-contact{
-        margin-left: 15px;
-        margin-bottom: 70px;
+        margin-left: 413px;
+        margin-bottom: 170px;
     }
-    img{
+
+    .contact{
+        float: left;
+        padding-top: 9px;
+        background-color: white;
+        border-radius: 200%;
         width: 40px;
+        height: 40px;
         margin-right: 20px;
+        position: relative;
+        top: 0;
+        transition: top ease 0.5s;
+
+        &:hover{
+            top: -10px;
+        }
+    }
+
+    .icon{
+        font-size: 18px; 
+        color: #1F1F26;
+
+        &:hover{
+            color: #eb334c;
+        }
     }
 }
 
@@ -191,12 +249,8 @@ footer{
         color: white;
     
         .icon-contact{
-            margin-left: 5px;
-            margin-bottom: 70px;
-        }
-        img{
-            width: 40px;
-            margin-right: 10px;
+            margin-left: 50px;
+            margin-bottom: 170px;
         }
     }
 }
